[package]
name = "webassembly"
version = "0.1.0"
authors = ["Cypress Frankenfeld <iamcypress@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/cypressf/learning-rust"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
